Huffman class finished. Added Node class.